<resources>
    <string name="app_name">TravelBlog_LoginScreen</string>
    <string name="textview_header" translatable="false">TextView</string>
    <string name="welcome">Welcome</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_to_site">New to Site?</string>
    <string name="register">Register</string>
    <string name="log_in_attempts_remaining_5">Log in attempts remaining: 5</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <!--    <string name="forgot_password">Forgot Password?</string>-->
    <!--    <string name="email">Email</string>-->
    <!--    <string name="login">Login</string>-->
    <string name="confirm_password">Confirm Password</string>
    <!--    <string name="register">Register</string>-->
    <string name="email">Email</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <!--    <string name="password">Password</string>-->
    <!--    <string name="register">Register</string>-->
    <!--    <string name="login">Login</string>-->
</resources>